; ModuleID = '/home/carl/AnghaBench/linux/fs/coda/extr_upcall.c_venus_close.c'
source_filename = "/home/carl/AnghaBench/linux/fs/coda/extr_upcall.c_venus_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32 }
%struct.CodaFid = type { i32 }
%union.inputArgs = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, %struct.CodaFid }
%union.outputArgs = type { i32 }
%struct.TYPE_3__ = type { i32 }

@release = common dso_local global i32 0, align 4
@CODA_CLOSE = common dso_local global i32 0, align 4
@init_user_ns = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @venus_close(%struct.super_block* %0, %struct.CodaFid* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.super_block*, align 8
  %6 = alloca %struct.CodaFid*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %union.inputArgs*, align 8
  %10 = alloca %union.outputArgs*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.super_block* %0, %struct.super_block** %5, align 8
  store %struct.CodaFid* %1, %struct.CodaFid** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %14 = load i32, i32* @release, align 4
  %15 = call i32 @SIZE(i32 %14)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* @CODA_CLOSE, align 4
  %17 = call i32 @UPARG(i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @from_kuid(i32* @init_user_ns, i32 %18)
  %20 = load %union.inputArgs*, %union.inputArgs** %9, align 8
  %21 = bitcast %union.inputArgs* %20 to %struct.TYPE_3__*
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store i32 %19, i32* %22, align 4
  %23 = load %union.inputArgs*, %union.inputArgs** %9, align 8
  %24 = bitcast %union.inputArgs* %23 to %struct.TYPE_4__*
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 1
  %26 = load %struct.CodaFid*, %struct.CodaFid** %6, align 8
  %27 = bitcast %struct.CodaFid* %25 to i8*
  %28 = bitcast %struct.CodaFid* %26 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %27, i8* align 4 %28, i64 4, i1 false)
  %29 = load i32, i32* %7, align 4
  %30 = load %union.inputArgs*, %union.inputArgs** %9, align 8
  %31 = bitcast %union.inputArgs* %30 to %struct.TYPE_4__*
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  store i32 %29, i32* %32, align 4
  %33 = load %struct.super_block*, %struct.super_block** %5, align 8
  %34 = call i32 @coda_vcp(%struct.super_block* %33)
  %35 = load i32, i32* %11, align 4
  %36 = load %union.inputArgs*, %union.inputArgs** %9, align 8
  %37 = call i32 @coda_upcall(i32 %34, i32 %35, i32* %12, %union.inputArgs* %36)
  store i32 %37, i32* %13, align 4
  %38 = load %union.inputArgs*, %union.inputArgs** %9, align 8
  %39 = call i32 @kvfree(%union.inputArgs* %38)
  %40 = load i32, i32* %13, align 4
  ret i32 %40
}

declare dso_local i32 @SIZE(i32) #1

declare dso_local i32 @UPARG(i32) #1

declare dso_local i32 @from_kuid(i32*, i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @coda_upcall(i32, i32, i32*, %union.inputArgs*) #1

declare dso_local i32 @coda_vcp(%struct.super_block*) #1

declare dso_local i32 @kvfree(%union.inputArgs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
